--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.nguyenvulong.androiddemo">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -7,21 +8,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        tools:replace="android:label"
         android:allowBackup="true"
         android:configChanges="keyboardHidden|orientation"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/images"
+        android:label="Meachine Learning"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoadingActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".activity.LoadingActivity"></activity>
+        <activity android:name=".activity.text"></activity>
     </application>
 
 </manifest>
